--- a/.gitignore
+++ b/.gitignore
@@ -121,7 +121,7 @@ dmypy.json
 .idea
 AGP/microbiome_graph.tsv
 
-american_gut_project/data/*
-!american_gut_project/data/__init__.py
+data/*
+!data/__init__.py
 american_gut_project/model/*
 !american_gut_project/model/__init__.py
