Notebook and pipeline

--- a/.gitignore
+++ b/.gitignore
@@ -123,6 +123,7 @@ AGP/microbiome_graph.tsv
 
 data/*
 data_pre_new_data
+pre_fix_w2v_data
 !data/__init__.py
 american_gut_project/model/*
 !american_gut_project/model/__init__.py
