--- a/.gitignore
+++ b/.gitignore
@@ -124,6 +124,7 @@ AGP/microbiome_graph.tsv
 data/*
 data_pre_new_data
 pre_fix_w2v_data
+old_models_and_data/*
 !data/__init__.py
 american_gut_project/model/*
 !american_gut_project/model/__init__.py
