--- a/.gitignore
+++ b/.gitignore
@@ -121,10 +121,11 @@ dmypy.json
 .idea
 AGP/microbiome_graph.tsv
 
-data/*
+data_other/*
 data_pre_new_data
 pre_fix_w2v_data
 old_models_and_data/*
-!data/__init__.py
+!data_other/__init__.py
 american_gut_project/model/*
 !american_gut_project/model/__init__.py
+data/
